# nonebot-plugin-talk-stats

./: LICENSE  README.md  bot.py  pyproject.toml
.github/actions/setup-python/: action.yml
.github/workflows/: ci.yml  publish.yml  pypi-publish.yml
nonebot_plugin_talk_stats/: __init__.py  config.py  matcher.py  render.py  scheduler.py
nonebot_plugin_talk_stats/templates/: scene.html.jinja2
